--- a/reviews.html
+++ b/reviews.html
@@ -46,7 +46,7 @@
     </div>
   </nav>
 
-<div class='sk-ww-google-reviews' data-embed-id='25436043'></div>
+<div class='sk-ww-google-reviews' data-embed-id='25436043'style="margin-top:90px;"></div>
 
 <script src='https://widgets.sociablekit.com/google-reviews/widget.js' async defer></script>
 
