--- a/termsandcondition.html
+++ b/termsandcondition.html
@@ -89,7 +89,7 @@
     
     <h2>Contact Us</h2>
     <p>
-      Owner: Chenna Nitish<br/>
+      Owner: Chenna Nitish<br>
       Operating Address: 39-8-7, Murali Nagar, Visakhapatnam, 530004, India<br>
       Contact Number: +91 9390300709<br>
       Email Address: connectpublicationspvtltd@gmail.com<br>
