--- a/paymentform.html
+++ b/paymentform.html
@@ -74,7 +74,7 @@
     }
     
     var options = {
-        "key": "rzp_live_rHjIxWwhzHpbLK", // Replace with your Razorpay Key ID
+        "key": "rzp_live_6HmYBOq2mpIYqQ", // Replace with your Razorpay Key ID
         "amount": 250 * 100, // Amount is in currency subunits. Default currency is INR. Hence, 1 refers to 1 paise (modify as needed)
         "currency": "INR",
         "name": "Connect Publications", // Your business name
@@ -98,7 +98,7 @@
     };
 
     var options2 = {
-        "key": "rzp_live_rHjIxWwhzHpbLK", // Replace with your Razorpay Key ID
+        "key": "rzp_live_6HmYBOq2mpIYqQ", // Replace with your Razorpay Key ID
         "amount": 2000 * 100, // Amount is in currency subunits. Default currency is INR. Hence, 1 refers to 1 paise (modify as needed)
         "currency": "INR",
         "name": "Connect Publications", // Your business name
