--- a/paymentform2.html
+++ b/paymentform2.html
@@ -74,7 +74,7 @@
     }
     
     var options = {
-        "key": "rzp_live_rHjIxWwhzHpbLK", // Replace with your Razorpay Key ID
+        "key": "rzp_live_6HmYBOq2mpIYqQ", // Replace with your Razorpay Key ID
         "amount": 250 * 100, // Amount is in currency subunits. Default currency is INR. Hence, 1 refers to 1 paise (modify as needed)
         "currency": "INR",
         "name": "Connect Publications", // Your business name
@@ -98,8 +98,8 @@
     };
 
     var options2 = {
-        "key": "rzp_live_rHjIxWwhzHpbLK", // Replace with your Razorpay Key ID
-        "amount": 2500 * 100, // Amount is in currency subunits. Default currency is INR. Hence, 1 refers to 1 paise (modify as needed)
+        "key": "rzp_live_6HmYBOq2mpIYqQ", // Replace with your Razorpay Key ID
+        "amount": 1 * 100, // Amount is in currency subunits. Default currency is INR. Hence, 1 refers to 1 paise (modify as needed)
         "currency": "INR",
         "name": "Connect Publications", // Your business name
         "description": "Payment for Premium Plan",
