--- a/paymentfrom3.html
+++ b/paymentfrom3.html
@@ -75,7 +75,7 @@
     }
     
     var options = {
-        "key": "rzp_live_rHjIxWwhzHpbLK", // Replace with your Razorpay Key ID
+        "key": "rzp_live_6HmYBOq2mpIYqQ", // Replace with your Razorpay Key ID
         "amount": 250 * 100, // Amount is in currency subunits. Default currency is INR. Hence, 1 refers to 1 paise (modify as needed)
         "currency": "INR",
         "name": "Connect Publications", // Your business name
@@ -99,7 +99,7 @@
     };
 
     var options2 = {
-        "key": "rzp_live_rHjIxWwhzHpbLK", // Replace with your Razorpay Key ID
+        "key": "rzp_live_6HmYBOq2mpIYqQ", // Replace with your Razorpay Key ID
         "amount": 3500 * 100, // Amount is in currency subunits. Default currency is INR. Hence, 1 refers to 1 paise (modify as needed)
         "currency": "INR",
         "name": "Connect Publications", // Your business name
